--- a/index.html
+++ b/index.html
@@ -43,15 +43,9 @@
         <h2 style="font-size: 2.2rem; margin-bottom: 10px;">Welcome to Tirumala TVS</h2>
         <p>We are committed to being a socially responsible and leading manufacturer.</p>
         <div class="brand-grid">
-            <div class="brand-item">
-                <span class="brand-icon">✔️</span><h3>50M+ Vehicles</h3><p>Celebrated globally.</p>
-            </div>
-            <div class="brand-item">
-                <span class="brand-icon">✔️</span><h3>80+ Countries</h3><p>Global trust.</p>
-            </div>
-            <div class="brand-item">
-                <span class="brand-icon">✔️</span><h3>Industry Leader</h3><p>Innovation first.</p>
-            </div>
+            <div class="brand-item"><span class="brand-icon">✔️</span><h3>50M+ Vehicles</h3><p>Celebrated globally.</p></div>
+            <div class="brand-item"><span class="brand-icon">✔️</span><h3>80+ Countries</h3><p>Global trust.</p></div>
+            <div class="brand-item"><span class="brand-icon">✔️</span><h3>Industry Leader</h3><p>Innovation first.</p></div>
         </div>
     </section>
 
@@ -124,7 +118,14 @@
         <div class="footer-grid">
             <div class="footer-column"><h4>Quick Links</h4><ul><li><a href="index.html">About Us</a></li><li><a href="#contact">Contact Us</a></li><li><a href="#contact">Book Service</a></li></ul></div>
             <div class="footer-column"><h4>Models</h4><ul><li><a href="models.html">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li><li><a href="models.html#electric">Electric</a></li></ul></div>
-            <div class="footer-column"><h4>Showroom</h4><ul><li><a href="#">Tirumala TVS Bidarahalli</a></li><li><a href="#">Authorized Main Dealer</a></li></ul></div>
+            <div class="footer-column">
+                <h4>Showroom</h4>
+                <ul>
+                    <li><a href="#">Tirumala TVS Bidarahalli</a></li>
+                    <li><a href="#">Authorized Main Dealer</a></li>
+                    <li><a href="https://www.google.com/maps/search/Tirumala+TVS+Bidarahalli" class="btn-map" target="_blank">📍 Go to Location</a></li>
+                </ul>
+            </div>
         </div>
     </footer>
     <div class="copyright-bar"><div>Copyright © 2025 Tirumala TVS Bidarahalli.</div></div>
