--- a/models.html
+++ b/models.html
@@ -13,9 +13,8 @@
         <div class="menu-toggle" onclick="toggleMenu()">☰</div>
         <div class="nav-menu" id="navMenu">
             <a href="index.html">HOME</a>
-            <a href="#motorcycles">MOTORCYCLES</a>
-            <a href="#scooters">SCOOTERS</a>
-            <a href="#electric">ELECTRIC</a>
+            <a href="index.html#about">ABOUT</a>
+            <a href="models.html" style="color: var(--tvs-red);">INVENTORY</a>
             <a href="index.html#contact">CONTACT</a>
         </div>
     </nav>
@@ -80,6 +79,20 @@
         <div class="contact-item">✉️ tirumalatvs716@gmail.com</div>
         <div class="contact-item">📞 +91 99649 46512</div>
     </div>
+    <footer class="main-footer">
+        <div class="footer-grid">
+            <div class="footer-column"><h4>Quick Links</h4><ul><li><a href="index.html">About Us</a></li><li><a href="index.html#contact">Contact Us</a></li><li><a href="index.html#contact">Book Service</a></li></ul></div>
+            <div class="footer-column"><h4>Models</h4><ul><li><a href="models.html">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li><li><a href="models.html#electric">Electric</a></li></ul></div>
+            <div class="footer-column">
+                <h4>Showroom</h4>
+                <ul>
+                    <li><a href="#">Tirumala TVS Bidarahalli</a></li>
+                    <li><a href="#">Authorized Main Dealer</a></li>
+                    <li><a href="https://www.google.com/maps/search/Tirumala+TVS+Bidarahalli" class="btn-map" target="_blank">📍 Go to Location</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <div class="copyright-bar"><div>Copyright © 2025 Tirumala TVS Bidarahalli.</div></div>
 
     <script>function toggleMenu(){document.getElementById("navMenu").classList.toggle("active");}</script>
