--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 
     <div class="header-top">
-        <a href="#contact" class="btn-header-action">Book Service Appointment</a>
+        <a href="#contact" class="btn-header-action">Book Service</a>
         <a href="#contact" class="btn-header-action">Get Quotation</a>
         <a href="#contact" class="btn-header-action">Book Test Drive</a>
     </div>
@@ -20,9 +20,8 @@
         <div class="nav-menu" id="navMenu">
             <a href="index.html">HOME</a>
             <a href="#about">ABOUT</a>
-            <a href="models.html">MOTORCYCLES</a>
-            <a href="models.html#scooters">SCOOTERS</a>
-            <a href="models.html#electric">ELECTRIC</a>
+            <a href="models.html">VEHICLES</a>
+            <a href="#services">SERVICES</a>
             <a href="#contact">CONTACT</a>
         </div>
     </nav>
@@ -49,7 +48,7 @@
         </div>
     </section>
 
-    <section style="background-color: var(--light-grey);">
+    <section style="background-color: white;">
         <h2 class="section-title">Latest Launches</h2>
         <div class="models-grid">
             <div class="model-card">
@@ -65,6 +64,46 @@
                 <div class="model-info"><h3>TVS Ronin</h3><p>Modern-Retro Scrambler.</p><a href="models/ronin.html" class="btn-view">View Details</a></div>
             </div>
         </div>
+    </section>
+
+    <section class="services-section" id="services">
+        <h2 class="section-title">Services Offered</h2>
+        <p class="section-subtitle">Professional care for your TVS vehicle</p>
+        
+        <div class="services-grid">
+            <div class="service-card">
+                <span class="service-icon">👨‍🔧</span>
+                <h3>Trusted Care</h3>
+                <p>Regular checkups and expert repairs by trained TVS technicians.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">⚙️</span>
+                <h3>Engine Diagnostics</h3>
+                <p>Ensure peak performance with modern diagnostic tools.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">🛢️</span>
+                <h3>Oil Change</h3>
+                <p>Genuine oil and parts to improve mileage and engine life.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">🛑</span>
+                <h3>Brake & Suspension</h3>
+                <p>Safety checks for brakes and suspension systems.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">🔋</span>
+                <h3>Battery & Electrical</h3>
+                <p>Complete checkup of battery health and electrical wiring.</p>
+            </div>
+            <div class="service-card">
+                <span class="service-icon">🛠️</span>
+                <h3>TVS Service Packages</h3>
+                <p>Affordable annual maintenance contracts (AMC).</p>
+            </div>
+        </div>
+
+        <a href="https://wa.me/919964946512?text=Hello%20Tirumala%20TVS,%20I%20would%20like%20to%20book%20a%20service%20appointment." class="btn-book-service" target="_blank">Book Service Appointment 💬</a>
     </section>
 
     <section style="background-color: white;">
