--- a/models.html
+++ b/models.html
@@ -1,176 +1,100 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Models | Tirumala TVS Inventory</title>
-    <meta name="description" content="Explore the full range of TVS two-wheelers available at Tirumala TVS. Check out the Apache, Jupiter, Raider, Ntorq, and iQube.">
-    <link rel="stylesheet" href="css/style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>All Models | Tirumala TVS</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
 
-    <div class="header-top">
-        <a href="index.html#contact" class="btn-header-action">Book Service</a>
-        <a href="index.html#contact" class="btn-header-action">Get Quotation</a>
-        <a href="index.html#contact" class="btn-header-action">Book Test Drive</a>
-    </div>
+    <nav class="main-nav-container">
+        <a href="index.html" class="logo-text">Tirumala <span>TVS</span></a>
+        <div class="menu-toggle" onclick="toggleMenu()">☰</div>
+        <div class="nav-menu" id="navMenu">
+            <a href="index.html">HOME</a>
+            <a href="index.html#about">ABOUT</a>
+            <a href="models.html" style="color: var(--tvs-red);">INVENTORY</a>
+            <a href="index.html#contact">CONTACT</a>
+        </div>
+    </nav>
 
-    <nav class="main-nav-container">
-        <a href="index.html" class="logo-text">Tirumala <span>TVS</span></a>
-        <div class="menu-toggle" onclick="toggleMenu()" aria-label="Toggle Menu">☰</div>
-        <div class="nav-menu" id="navMenu">
-            <a href="index.html">HOME</a>
-            <a href="index.html#about">ABOUT</a>
-            <a href="models.html" class="active-link" style="color: var(--tvs-red); font-weight: bold;">INVENTORY</a>
-            <a href="index.html#services">SERVICES</a>
-            <a href="index.html#contact">CONTACT</a>
-        </div>
-    </nav>
+    <div class="category-header" id="motorcycles">MOTORCYCLES</div>
+    <div class="models-grid">
+        <div class="model-card">
+            <img src="assets/apache160.jpg" alt="Apache 160" onerror="this.src='https://placehold.co/600x400?text=Apache'">
+            <div class="model-info"><h3>Apache RTR 160 4V</h3><p>Racing DNA Unleashed</p><a href="models/apache160.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/apache200.jpg" alt="Apache 200" onerror="this.src='https://placehold.co/600x400?text=Apache+200'">
+            <div class="model-info"><h3>Apache RTR 200 4V</h3><p>Race Tuned Slipper Clutch</p><a href="models/apache200.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/ronin.jpg" alt="Ronin" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
+            <div class="model-info"><h3>TVS Ronin</h3><p>Unscripted Life</p><a href="models/ronin.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/raider.jpg" alt="Raider" onerror="this.src='https://placehold.co/600x400?text=Raider'">
+            <div class="model-info"><h3>TVS Raider 125</h3><p>The Wicked Ride</p><a href="models/raider.html" class="btn-view">View Details</a></div>
+        </div>
+    </div>
 
-    <div class="category-header" id="motorcycles">MOTORCYCLES</div>
-    <div class="models-grid">
-        <div class="model-card">
-            <img src="assets/apache160.jpg" alt="Apache 160" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Apache'">
-            <div class="model-info">
-                <h3>Apache RTR 160 4V</h3>
-                <p>Racing DNA Unleashed</p>
-                <a href="models/apache160.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/apache200.jpg" alt="Apache 200" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Apache+200'">
-            <div class="model-info">
-                <h3>Apache RTR 200 4V</h3>
-                <p>Race Tuned Slipper Clutch</p>
-                <a href="models/apache200.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/ronin.jpg" alt="Ronin" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Ronin'">
-            <div class="model-info">
-                <h3>TVS Ronin</h3>
-                <p>Unscripted Life</p>
-                <a href="models/ronin.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/raider.jpg" alt="Raider" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Raider'">
-            <div class="model-info">
-                <h3>TVS Raider 125</h3>
-                <p>The Wicked Ride</p>
-                <a href="models/raider.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-    </div>
+    <div class="category-header" id="scooters">SCOOTERS</div>
+    <div class="models-grid">
+        <div class="model-card">
+            <img src="assets/jupiter110.jpg" alt="Jupiter 110" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
+            <div class="model-info"><h3>New Jupiter 110</h3><p>Zyada Se Bhi Zyada</p><a href="models/jupiter113.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/jupiter125.jpg" alt="Jupiter 125" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'">
+            <div class="model-info"><h3>Jupiter 125</h3><p>Progressive Neo Masculine</p><a href="models/jupiter125.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/ntorq.jpg" alt="Ntorq 125" onerror="this.src='https://placehold.co/600x400?text=Ntorq'">
+            <div class="model-info"><h3>Ntorq 125</h3><p>Play Smart</p><a href="models/ntorq125.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/ntorq.jpg" alt="Ntorq XP" onerror="this.src='https://placehold.co/600x400?text=Ntorq+XP'">
+            <div class="model-info"><h3>Ntorq Race XP</h3><p>India's Most Powerful 125</p><a href="models/ntorq150.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/zest.jpg" alt="Zest 110" onerror="this.src='https://placehold.co/600x400?text=Zest'">
+            <div class="model-info"><h3>Zest 110</h3><p>Live Full. Live Free.</p><a href="models/zest110.html" class="btn-view">View Details</a></div>
+        </div>
+    </div>
 
-    <div class="category-header" id="scooters">SCOOTERS</div>
-    <div class="models-grid">
-        <div class="model-card">
-            <img src="assets/jupiter110.jpg" alt="Jupiter 110" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Jupiter+110'">
-            <div class="model-info">
-                <h3>New Jupiter 110</h3>
-                <p>Zyada Se Bhi Zyada</p>
-                <a href="models/jupiter113.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/jupiter125.jpg" alt="Jupiter 125" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Jupiter+125'">
-            <div class="model-info">
-                <h3>Jupiter 125</h3>
-                <p>Progressive Neo Masculine</p>
-                <a href="models/jupiter125.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/ntorq.jpg" alt="Ntorq 125" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Ntorq'">
-            <div class="model-info">
-                <h3>Ntorq 125</h3>
-                <p>Play Smart</p>
-                <a href="models/ntorq125.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/ntorq.jpg" alt="Ntorq XP" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Ntorq+XP'">
-            <div class="model-info">
-                <h3>Ntorq Race XP</h3>
-                <p>India's Most Powerful 125</p>
-                <a href="models/ntorq150.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/zest.jpg" alt="Zest 110" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=Zest'">
-            <div class="model-info">
-                <h3>Zest 110</h3>
-                <p>Live Full. Live Free.</p>
-                <a href="models/zest110.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-    </div>
+    <div class="category-header" id="electric">ELECTRIC & MOPEDS</div>
+    <div class="models-grid">
+        <div class="model-card">
+            <img src="assets/iqube.jpg" alt="iQube" onerror="this.src='https://placehold.co/600x400?text=iQube'">
+            <div class="model-info"><h3>TVS iQube</h3><p>Smart. Simple. Silent.</p><a href="models/iqube.html" class="btn-view">View Details</a></div>
+        </div>
+        <div class="model-card">
+            <img src="assets/xl100.jpg" alt="XL100" onerror="this.src='https://placehold.co/600x400?text=XL100'">
+            <div class="model-info"><h3>XL100 Heavy Duty</h3><p>The Multi-Utility King</p><a href="models/xl100.html" class="btn-view">View Details</a></div>
+        </div>
+    </div>
 
-    <div class="category-header" id="electric">ELECTRIC & MOPEDS</div>
-    <div class="models-grid">
-        <div class="model-card">
-            <img src="assets/iqube.jpg" alt="iQube" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=iQube'">
-            <div class="model-info">
-                <h3>TVS iQube</h3>
-                <p>Smart. Simple. Silent.</p>
-                <a href="models/iqube.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-        <div class="model-card">
-            <img src="assets/xl100.jpg" alt="XL100" loading="lazy" onerror="this.src='https://placehold.co/600x400?text=XL100'">
-            <div class="model-info">
-                <h3>XL100 Heavy Duty</h3>
-                <p>The Multi-Utility King</p>
-                <a href="models/xl100.html" class="btn-view">View Details</a>
-            </div>
-        </div>
-    </div>
+    <div class="footer-contact-bar">
+        <div class="contact-item">✉️ tirumalatvs716@gmail.com</div>
+        <div class="contact-item">📞 +91 99649 46512</div>
+    </div>
+    <footer class="main-footer">
+        <div class="footer-grid">
+            <div class="footer-column"><h4>Quick Links</h4><ul><li><a href="index.html">About Us</a></li><li><a href="index.html#contact">Contact Us</a></li><li><a href="index.html#contact">Book Service</a></li></ul></div>
+            <div class="footer-column"><h4>Models</h4><ul><li><a href="models.html">Motorcycles</a></li><li><a href="models.html#scooters">Scooters</a></li><li><a href="models.html#electric">Electric</a></li></ul></div>
+            <div class="footer-column">
+                <h4>Showroom</h4>
+                <ul>
+                    <li><a href="#">Tirumala TVS Bidarahalli</a></li>
+                    <li><a href="#">Authorized Main Dealer</a></li>
+                    <li><a href="https://www.google.com/maps/search/Tirumala+TVS+Bidarahalli" class="btn-map" target="_blank">📍 Go to Location</a></li>
+                </ul>
+            </div>
+        </div>
+    </footer>
+    <div class="copyright-bar"><div>Copyright © 2025 Tirumala TVS Bidarahalli.</div></div>
 
-    <div class="footer-contact-bar">
-        <div class="contact-item">✉️ tirumalatvs716@gmail.com</div>
-        <div class="contact-item">📞 +91 99649 46512</div>
-    </div>
-
-    <footer class="main-footer">
-        <div class="footer-grid">
-            <div class="footer-column">
-                <h4>Quick Links</h4>
-                <ul>
-                    <li><a href="index.html">About Us</a></li>
-                    <li><a href="index.html#contact">Contact Us</a></li>
-                    <li><a href="index.html#contact">Book Service</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Models</h4>
-                <ul>
-                    <li><a href="models.html">Motorcycles</a></li>
-                    <li><a href="models.html#scooters">Scooters</a></li>
-                    <li><a href="models.html#electric">Electric</a></li>
-                </ul>
-            </div>
-            <div class="footer-column">
-                <h4>Showroom</h4>
-                <ul>
-                    <li><a href="#">Tirumala TVS Bidarahalli</a></li>
-                    <li><a href="#">Authorized Main Dealer</a></li>
-                    <li><a href="https://www.google.com/maps/search/?api=1&query=Tirumala+TVS+Bidarahalli" class="btn-map" target="_blank">📍 Go to Location</a></li>
-                </ul>
-            </div>
-        </div>
-    </footer>
-    
-    <div class="copyright-bar">
-        <div>Copyright © 2025 Tirumala TVS Bidarahalli.</div>
-    </div>
-
-    <a href="https://wa.me/919964946512?text=Hi%20Tirumala%20TVS" class="whatsapp-float" target="_blank" aria-label="Chat on WhatsApp">💬</a>
-
-    <script>
-        function toggleMenu() {
-            document.getElementById("navMenu").classList.toggle("active");
-        }
-    </script>
+    <script>function toggleMenu(){document.getElementById("navMenu").classList.toggle("active");}</script>
 </body>
 </html>
