--- a/models/raider.html
+++ b/models/raider.html
@@ -4,70 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TVS Raider 125 | Tirumala TVS</title>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-    <nav class="nav-container">
-        <a href="../index.html" class="logo"><h1>Tirumala <span>TVS</span></h1></a>
-        <div class="nav-links">
-            <a href="../index.html">Home</a>
-            <a href="../models.html">Inventory</a>
-            <a href="../contacts.html" style="color: var(--tvs-red);">Book Test Ride</a>
+    <nav class="navbar">
+        <div class="container nav-content">
+            <a href="../index.html" class="logo">Tirumala <span>TVS</span></a>
+            <div class="menu-toggle" onclick="toggleMenu()"><span class="bar"></span><span class="bar"></span><span class="bar"></span></div>
+            <div class="nav-links" id="navMenu">
+                <a href="../index.html">Home</a>
+                <a href="../models.html">Inventory</a>
+                <a href="../index.html#contact" class="btn-nav-contact">Contact Us</a>
+            </div>
         </div>
     </nav>
 
-    <section class="model-hero">
-        <div class="hero-text">
-            <span class="hero-tag" style="background: #d3161c;">BEST SELLER</span>
-            <h1>TVS Raider 125</h1>
-            <h3>The Wicked Ride</h3>
-            <p>
-                India's first 125cc bike with a TFT screen and Voice Assist. 
-                Combining "Wicked" performance with sporty looks and a unique "Animalistic" LED headlamp.
-            </p>
-            <div class="hero-btns">
-                <a href="../contacts.html" class="btn-primary">📅 Book Test Ride</a>
-                <a href="https://wa.me/919964946512" class="btn-secondary">💬 WhatsApp</a>
+    <div class="model-hero">
+        <div class="hero-text-side">
+            <span class="model-tag">THE WICKED RIDE</span>
+            <h1 class="model-title">TVS Raider 125</h1>
+            <p class="section-subtitle">Commuter of the Year. Best-in-class acceleration with a sporty distinctive look.</p>
+            <div class="model-price">₹ 95,219* <br><span>(Starting Ex-Showroom)</span></div>
+            <div style="display: flex; gap: 15px; flex-wrap: wrap;">
+                <a href="https://wa.me/919964946512?text=Book%20Test%20Ride%20Raider" class="btn btn-primary">Book Test Ride 🏍️</a>
+                <a href="tel:+919964946512" class="btn btn-outline">Call Showroom 📞</a>
             </div>
         </div>
-        <div class="hero-image">
+        <div class="hero-img-side">
             <img src="../assets/raider.jpg" alt="TVS Raider" onerror="this.src='https://placehold.co/800x600?text=Raider+125'">
         </div>
-    </section>
-
-    <div class="stats-bar">
-        <div class="stat-box"><h4>5.9 s</h4><p>0-60 km/h</p></div>
-        <div class="stat-box"><h4>124.8 cc</h4><p>3-Valve Engine</p></div>
-        <div class="stat-box"><h4>TFT</h4><p>Smart Console</p></div>
-        <div class="stat-box"><h4>11.38 PS</h4><p>Max Power</p></div>
     </div>
 
-    <section class="info-section">
-        <div class="section-head">
-            <h2>Wicked Features</h2>
-            <p>Advanced technology meets aggressive styling.</p>
+    <div class="spec-bar-dark">
+        <div class="spec-bar-grid">
+            <div class="dark-spec-item"><h4>67</h4><p>kmpl Mileage</p></div>
+            <div class="dark-spec-item"><h4>5.9s</h4><p>0-60 km/h</p></div>
+            <div class="dark-spec-item"><h4>11.38</h4><p>PS Power</p></div>
+            <div class="dark-spec-item"><h4>TFT</h4><p>Smart Console</p></div>
         </div>
-        <div class="features-grid">
-            <div class="feature-card"><span class="feature-icon">🚀</span><h4>Best Acceleration</h4><p>Fastest in segment acceleration 0-60 km/h in just 5.9 seconds.</p></div>
-            <div class="feature-card"><span class="feature-icon">📟</span><h4>TFT Display</h4><p>5-inch TFT console with Voice Assist, Navigation, and Gear Shift Indicator.</p></div>
-            <div class="feature-card"><span class="feature-icon">🛑</span><h4>Mono-Shock</h4><p>Gas-charged 5-step adjustable mono-shock suspension for superior handling.</p></div>
-            <div class="feature-card"><span class="feature-icon">🔌</span><h4>USB Charging</h4><p>Convenient on-the-go mobile charging port located near the tank.</p></div>
-        </div>
-    </section>
+    </div>
 
-    <section class="info-section" style="background-color: #f9f9f9;">
-        <div class="section-head"><h2>Technical Specifications</h2></div>
-        <div class="specs-container">
-            <div class="spec-row"><div class="spec-key">Engine</div><div class="spec-val">124.8 cc, Air & Oil Cooled, 3V</div></div>
-            <div class="spec-row"><div class="spec-key">Power</div><div class="spec-val">11.38 PS @ 7500 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Torque</div><div class="spec-val">11.2 Nm @ 6000 rpm</div></div>
-            <div class="spec-row"><div class="spec-key">Transmission</div><div class="spec-val">5 Speed Manual</div></div>
-            <div class="spec-row"><div class="spec-key">Weight</div><div class="spec-val">123 kg</div></div>
-            <div class="spec-row"><div class="spec-key">Fuel Tank</div><div class="spec-val">10 Liters</div></div>
+    <div class="feature-section container">
+        <div class="feature-row">
+            <div class="feature-txt">
+                <h3>Animalistic LED Headlamp</h3>
+                <p>The unique "Wicked" design of the headlamp gives the Raider a distinct road presence that turns heads everywhere.</p>
+            </div>
+            <div class="feature-img"><img src="../assets/raider_light.jpg" alt="Raider Headlamp" onerror="this.src='https://placehold.co/600x400?text=LED+Headlamp'"></div>
         </div>
-    </section>
+        <div class="feature-row">
+            <div class="feature-txt">
+                <h3>Reverse LCD / TFT Display</h3>
+                <p>A segment-first digital console with gear shift indicator, distance to empty, and navigation (on SmartXonnect variants).</p>
+            </div>
+            <div class="feature-img"><img src="../assets/raider_console.jpg" alt="Raider Console" onerror="this.src='https://placehold.co/600x400?text=Digital+Console'"></div>
+        </div>
+        <div class="feature-row">
+            <div class="feature-txt">
+                <h3>Under-Seat Storage</h3>
+                <p>A convenient storage space under the split seat for your mobile, wallet, or documents. A rare feature in motorcycles!</p>
+            </div>
+            <div class="feature-img"><img src="../assets/raider_seat.jpg" alt="Under Seat Storage" onerror="this.src='https://placehold.co/600x400?text=Storage+Space'"></div>
+        </div>
+    </div>
 
-    <footer><p>&copy; 2024 Tirumala TVS Bidarahalli.</p></footer>
+    <div class="section-padding bg-light text-center">
+        <h2 style="margin-bottom: 20px;">Get Wicked Today</h2>
+        <a href="https://wa.me/919964946512?text=Get%20Quote%20Raider" class="btn btn-whatsapp">Get On-Road Price 💬</a>
+    </div>
+
+    <footer class="footer"><div class="container text-center"><p>&copy; 2025 Tirumala TVS.</p></div></footer>
+    <script>function toggleMenu() { document.getElementById("navMenu").classList.toggle("active"); }</script>
 </body>
 </html>
